--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,16 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!-- Page header -->
     <header>
       <nav>
-        <a href="./index.html" class="Logo">WebStudio</a>
+        <a href="./index.html" class="logo"
+          >WEB<span class="logo1">STUDIO</span></a
+        >
 
         <!-- Navigation to other pages -->
-        <ul>
+        <ul class="site-nav">
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
@@ -31,6 +39,7 @@
     <!-- Home page -->
     <main>
       <!-- Filtr -->
+      <h1>Portfolio</h1>
       <ul>
         <li><button type="button">All</button></li>
         <li><button type="button">Web Site</button></li>
@@ -46,10 +55,39 @@
             alt="Banking App Interface Concept"
             width="360"
           />
-          <h1>Banking App Interface Concept</h1>
+          <h2>Banking App Interface Concept</h2>
+          <p>App</p>
+        </li>
+        <li>
+          <img
+            src="./images/Cashless_Payment.jpg"
+            alt="Cashless Payment"
+            width="360"
+          />
+          <h2>Cashless Payment</h2>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/Meditaion_App.jpg"
+            alt="Meditaion App"
+            width="360"
+          />
+          <h2>Meditaion App</h2>
           <p>App</p>
         </li>
       </ul>
     </main>
+    <!-- Footer -->
+    <footer>
+      <a href="./index.html" class="logo"
+        >WEB<span class="logo1">STUDIO</span></a
+      >
+
+      <p class="footer-title">
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
