--- a/index.html
+++ b/index.html
@@ -5,26 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <!-- Page header -->
     <header>
       <nav>
-        <a href="./index.html" class="Logo">WebStudio</a>
+        <a href="./index.html" class="logo"
+          >WEB<span class="logo1">STUDIO</span></a
+        >
 
         <!-- Navigation to other pages -->
-        <ul class="site-nav list">
+        <ul class="site-nav">
           <li><a href="">Studio</a></li>
           <li><a href="./portfolio.html">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <!-- Contscts -->
+      <!-- Contacts -->
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="auth-nav">
+          <li class="text-contacts-email">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="text-contacts-tel">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -32,15 +44,17 @@
       <!-- Home page section 1 -->
 
       <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <h1 class="section-title-text">
+          Effective Solutions for Your Business
+        </h1>
+        <button type="button" class="section-title-text">Order Service</button>
       </section>
       <!-- Home page section 2 -->
       <section>
-        <h2>Strategy</h2>
+        <h2 class="section-title">Strategy</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="section-title">Strategy</h3>
             <p>
               Our goal is to identify the business <br />
               problem to walk away with the <br />
@@ -48,7 +62,7 @@
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="section-title">Punctuality</h3>
             <p>
               Bring the key message to the <br />
               brand's audience for the best price <br />
@@ -56,7 +70,7 @@
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="section-title">Diligence</h3>
             <p>
               Research and confirm brands that <br />
               present the strongest digital growth <br />
@@ -64,7 +78,7 @@
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="section-title">Technologies</h3>
             <p>
               Design practice focused on digital <br />
               experiences. We bring forth a deep <br />
@@ -76,7 +90,7 @@
       <!-- Home page section 3 -->
 
       <section>
-        <h2>What are we doing</h2>
+        <h2 class="section-title">What are we doing</h2>
         <ul>
           <li><img src="./images/img1.jpg" alt="Photo1" width="360" /></li>
           <li><img src="./images/img2.jpg" alt="Photo2" width="360" /></li>
@@ -87,7 +101,7 @@
       <!-- Home page section 4 -->
 
       <section>
-        <h2>Our Team</h2>
+        <h2 class="section-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -95,12 +109,12 @@
               alt="Mark_Guerrero"
               width="264"
             />
-            <h3>Mark Guerrero</h3>
+            <h3 class="section-title">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/Tom_Ford.jpg" alt="Tom_Ford" width="264" />
-            <h3>Tom Ford</h3>
+            <h3 class="section-title">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -109,7 +123,7 @@
               alt="TCamila_Garcia"
               width="264"
             />
-            <h3>Camila Garcia</h3>
+            <h3 class="section-title">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -118,7 +132,7 @@
               alt="Daniel_Wilson"
               width="264"
             />
-            <h3>Daniel Wilson</h3>
+            <h3 class="section-title">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -126,9 +140,11 @@
     </main>
     <!-- Footer -->
     <footer>
-      <a href="./index.html">WebStudio</a>
+      <a href="./index.html" class="logo"
+        >WEB<span class="logo1">STUDIO</span></a
+      >
 
-      <p>
+      <p class="footer-title">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
