--- a/Portfolio.html
+++ b/Portfolio.html
@@ -30,9 +30,13 @@
       </nav>
       <!-- Contscts -->
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="auth-nav">
+          <li class="text-contacts-email">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="text-contacts-tel">
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -75,6 +79,42 @@
           />
           <h2>Meditaion App</h2>
           <p>App</p>
+        </li>
+        <li>
+          <img src="./images/Taxi_Service.jpg" alt="Taxi Service" />
+          <h2>Taxi Service</h2>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/Screen_Illustrations.jpg"
+            alt="Screen Illustrations"
+          />
+          <h2>Screen Illustrations</h2>
+          <p>Design</p>
+        </li>
+        <li>
+          <img src="./images/Online_Courses.jpg" alt="Online Courses" />
+          <h2>Online Courses</h2>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/Instagram_Stories_Concept.jpg"
+            alt="Instagram Stories Concept"
+          />
+          <h2>Instagram Stories Concept</h2>
+          <p>Design</p>
+        </li>
+        <li>
+          <img src="./images/Organic_Food.jpg" alt="Organic Food" />
+          <h2>Organic Food</h2>
+          <p>Web Site</p>
+        </li>
+        <li>
+          <img src="./images/Fresh_Coffee.jpg" alt="Fresh Coffee" />
+          <h2>Fresh Coffee</h2>
+          <p>Web Site</p>
         </li>
       </ul>
     </main>
