--- a/Portfolio.html
+++ b/Portfolio.html
@@ -131,3 +131,11 @@
     </footer>
   </body>
 </html>
+
+<p class="footer-title">
+  Increase the flow of customers and sales for your business with digital
+  marketing & growth solutions.
+</p>
+</footer>
+</body>
+</html>
