--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!-- Page header -->
     <header>
       <nav>
-        <a href="./index.html" class="logo"
-          >WEB<span class="logo1">STUDIO</span></a
+        <a href="./index.html" class="logo-web"
+          >WEB<span class="logo-studio">STUDIO</span></a
         >
 
         <!-- Navigation to other pages -->
@@ -140,8 +140,8 @@
     </main>
     <!-- Footer -->
     <footer>
-      <a href="./index.html" class="logo"
-        >WEB<span class="logo1">STUDIO</span></a
+      <a href="./index.html" class="logo-web"
+        >WEB<span class="logo-studio">STUDIO</span></a
       >
 
       <p class="footer-title">
