--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <!-- Page header -->
+  <!-- Page header -->
+  <body class="body" id="body">
     <header>
       <nav>
         <a href="./index.html" class="logo-web"
