--- a/index.html
+++ b/index.html
@@ -139,13 +139,14 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="logo-web"
-        >WEB<span class="logo-studio">STUDIO</span></a
+        >WEB<span class="logo-studio-footer">Studio</span></a
       >
 
       <p class="footer-title">
-        Increase the flow of customers and sales for your business with digital
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
         marketing & growth solutions.
       </p>
     </footer>
