--- a/index.html
+++ b/index.html
@@ -15,17 +15,21 @@
   </head>
   <!-- Page header -->
   <body class="body" id="body">
-    <header>
-      <nav>
-        <a href="./index.html" class="logo-web"
-          >WEB<span class="logo-studio">STUDIO</span></a
+    <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" class="header-logo-web"
+          >WEB<span class="header-logo-studio">STUDIO</span></a
         >
 
         <!-- Navigation to other pages -->
         <ul class="site-nav">
-          <li><a href="">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li class="header-item"><a class="header-link" href="">Studio</a></li>
+          <li class="header-item">
+            <a class="header-link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <!-- Contacts -->
