--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo-web"
+      <a href="./index.html" class="header-logo-web"
         >WEB<span class="logo-studio-footer">Studio</span></a
       >
 
