--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <nav class="header-nav">
         <a href="./index.html" class="header-logo-web"
-          >WEB<span class="header-logo-studio">STUDIO</span></a
+          >WEB<span class="header-logo-studio">Studio</span></a
         >
 
         <!-- Navigation to other pages -->
