--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <main>
       <!-- Home page section 1 -->
 
-      <section class="section1">
+      <section class="section-hero">
         <h1 class="section-title-text">
           Effective Solutions for Your Business
         </h1>
