--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <h1 class="section-title-text">
           Effective Solutions for Your Business
         </h1>
-        <button type="button" class="section-title-text">Order Service</button>
+        <button type="button" class="button-title-text">Order Service</button>
       </section>
       <!-- Home page section 2 -->
       <section>
