--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
   <body class="body" id="body">
     <header class="header">
       <nav class="header-nav">
-        <a href="./index.html" class="header-logo-web"
-          >WEB<span class="header-logo-studio">Studio</span></a
+        <a href="./index.html" class="header-logo-web link"
+          >WEB<span class="header-logo-studio link">Studio</span></a
         >
 
         <!-- Navigation to other pages -->
         <ul class="site-nav">
-          <li class="header-item"><a class="header-link" href="">Studio</a></li>
           <li class="header-item">
-            <a class="header-link" href="./portfolio.html">Portfolio</a>
+            <a class="header-link link" href="">Studio</a>
           </li>
           <li class="header-item">
-            <a class="header-link" href="">Contacts</a>
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -36,10 +38,12 @@
       <address>
         <ul class="auth-nav">
           <li class="text-contacts-email">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="text-contacts-tel">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -144,7 +148,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="header-logo-web"
+      <a href="./index.html" class="header-logo-web link"
         >WEB<span class="logo-studio-footer">Studio</span></a
       >
 
