--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         >
 
         <!-- Navigation to other pages -->
-        <ul class="site-nav">
+        <ul class="site-nav list">
           <li class="header-item">
             <a class="header-link link" href="">Studio</a>
           </li>
@@ -36,7 +36,7 @@
       </nav>
       <!-- Contacts -->
       <address>
-        <ul class="auth-nav">
+        <ul class="auth-nav list">
           <li class="text-contacts-email">
             <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -60,7 +60,7 @@
       <!-- Home page section 2 -->
       <section>
         <h2 class="section-title">Strategy</h2>
-        <ul>
+        <ul class="list">
           <li>
             <h3 class="section-title">Strategy</h3>
             <p>
@@ -99,7 +99,7 @@
 
       <section>
         <h2 class="section-title">What are we doing</h2>
-        <ul>
+        <ul class="list">
           <li><img src="./images/img1.jpg" alt="Photo1" width="360" /></li>
           <li><img src="./images/img2.jpg" alt="Photo2" width="360" /></li>
           <li><img src="./images/img3.jpg" alt="Photo3" width="360" /></li>
@@ -110,7 +110,7 @@
 
       <section>
         <h2 class="section-title">Our Team</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/Mark_Guerrero.jpg"
