--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Navigation to other pages -->
         <ul class="site-nav list">
           <li class="header-item">
-            <a class="header-link link" href="">Studio</a>
+            <a class="header-link link" href="./index.html">Studio</a>
           </li>
           <li class="header-item">
             <a class="header-link link" href="./portfolio.html">Portfolio</a>
@@ -35,7 +35,7 @@
         </ul>
       </nav>
       <!-- Contacts -->
-      <address>
+      <address class="address">
         <ul class="auth-nav list">
           <li class="text-contacts-email">
             <a class="link" href="mailto:info@devstudio.com"
