--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </section>
       <!-- Home page section 2 -->
       <section>
-        <h2 class="section-title">Strategy</h2>
+        <h2 class="section-title-hidden">Strategy</h2>
         <ul class="list">
           <li>
             <h3 class="section-title">Strategy</h3>
