--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <!-- Home page section 2 -->
       <section>
         <h2 class="section-title-hidden">Strategy</h2>
-        <ul class="list">
+        <ul class="text-p list">
           <li>
             <h3 class="section-title">Strategy</h3>
             <p>
