--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <button type="button" class="button-title-text">Order Service</button>
       </section>
       <!-- Home page section 2 -->
-      <section>
+      <section class="section-strategy">
         <h2 class="section-title-hidden">Strategy</h2>
         <ul class="text-p list">
           <li>
@@ -98,7 +98,7 @@
       <!-- Home page section 3 -->
 
       <section>
-        <h2 class="section-title">What are we doing</h2>
+        <h2 class="section-title-p">What are we doing</h2>
         <ul class="list">
           <li><img src="./images/img1.jpg" alt="Photo1" width="360" /></li>
           <li><img src="./images/img2.jpg" alt="Photo2" width="360" /></li>
@@ -109,7 +109,7 @@
       <!-- Home page section 4 -->
 
       <section>
-        <h2 class="section-title">Our Team</h2>
+        <h2 class="section-title-p">Our Team</h2>
         <ul class="list">
           <li>
             <img
