--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
       <section>
         <h2 class="section-title-p">Our Team</h2>
-        <ul class="list">
+        <ul class="text-p list">
           <li>
             <img
               src="./images/Mark_Guerrero.jpg"
