--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
               alt="Mark_Guerrero"
               width="264"
             />
-            <h3 class="stext-p">Mark Guerrero</h3>
+            <h3 class="section-title">Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/Tom_Ford.jpg" alt="Tom_Ford" width="264" />
-            <h3 class="text-p">Tom Ford</h3>
+            <h3 class="section-title">Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -131,7 +131,7 @@
               alt="TCamila_Garcia"
               width="264"
             />
-            <h3 class="text-p">Camila Garcia</h3>
+            <h3 class="section-title">Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -140,7 +140,7 @@
               alt="Daniel_Wilson"
               width="264"
             />
-            <h3 class="text-p">Daniel Wilson</h3>
+            <h3 class="section-title">Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
