--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
       <!-- Home page section 2 -->
       <section class="section-strategy">
         <h2 class="section-title-hidden">Strategy</h2>
-        <ul class="text-p list">
+        <ul class="list">
           <li>
             <h3 class="section-title">Strategy</h3>
-            <p>
+            <p class="text-p">
               Our goal is to identify the business <br />
               problem to walk away with the <br />
               perfect and creative solution.
@@ -71,7 +71,7 @@
           </li>
           <li>
             <h3 class="section-title">Punctuality</h3>
-            <p>
+            <p class="text-p">
               Bring the key message to the <br />
               brand's audience for the best price <br />
               within the shortest possible time.
@@ -79,7 +79,7 @@
           </li>
           <li>
             <h3 class="section-title">Diligence</h3>
-            <p>
+            <p class="text-p">
               Research and confirm brands that <br />
               present the strongest digital growth <br />
               opportunities and minimize risk.
@@ -87,7 +87,7 @@
           </li>
           <li>
             <h3 class="section-title">Technologies</h3>
-            <p>
+            <p class="text-p">
               Design practice focused on digital <br />
               experiences. We bring forth a deep <br />
               passion for problem-solving.
