--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
               width="264"
             />
             <h3 class="section-title">Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="text-p">Product Designer</p>
           </li>
           <li>
             <img src="./images/Tom_Ford.jpg" alt="Tom_Ford" width="264" />
             <h3 class="section-title">Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="text-p">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -132,7 +132,7 @@
               width="264"
             />
             <h3 class="section-title">Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="text-p">Marketing</p>
           </li>
           <li>
             <img
@@ -141,7 +141,7 @@
               width="264"
             />
             <h3 class="section-title">Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="text-p">UI Designer</p>
           </li>
         </ul>
       </section>
