--- a/portfolio.html
+++ b/portfolio.html
@@ -13,29 +13,37 @@
     />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body>
-    <!-- Page header -->
-    <header>
-      <nav>
-        <a href="./index.html" class="logo-web"
-          >WEB<span class="logo-studio">STUDIO</span></a
+  <!-- Page header -->
+  <body class="body" id="body">
+    <header class="header">
+      <nav class="header-nav">
+        <a href="./index.html" class="header-logo-web link"
+          >WEB<span class="header-logo-studio link">Studio</span></a
         >
 
         <!-- Navigation to other pages -->
-        <ul class="site-nav">
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="site-nav list">
+          <li class="header-item">
+            <a class="header-link link" href="./index.html">Studio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="header-item">
+            <a class="header-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <!-- Contscts -->
-      <address>
-        <ul class="auth-nav">
+      <!-- Contacts -->
+      <address class="address">
+        <ul class="auth-nav list">
           <li class="text-contacts-email">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="text-contacts-tel">
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
@@ -119,13 +127,14 @@
       </ul>
     </main>
     <!-- Footer -->
-    <footer>
-      <a href="./index.html" class="logo-web"
-        >WEB<span class="logo-studio">STUDIO</span></a
+    <footer class="footer">
+      <a href="./index.html" class="header-logo-web link"
+        >WEB<span class="logo-studio-footer">Studio</span></a
       >
 
       <p class="footer-title">
-        Increase the flow of customers and sales for your business with digital
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
         marketing & growth solutions.
       </p>
     </footer>
