--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
     <!-- Home page -->
     <main>
       <!-- Filtr -->
-      <h1>Portfolio</h1>
+
       <ul>
         <li><button type="button">All</button></li>
         <li><button type="button">Web Site</button></li>
@@ -60,71 +60,74 @@
         <li><button type="button">Marketing</button></li>
       </ul>
       <!-- list of works -->
-      <ul>
-        <li>
-          <img
-            src="./images/Banking_App_Interface_Concept.jpg"
-            alt="Banking App Interface Concept"
-            width="360"
-          />
-          <h2>Banking App Interface Concept</h2>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src="./images/Cashless_Payment.jpg"
-            alt="Cashless Payment"
-            width="360"
-          />
-          <h2>Cashless Payment</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/Meditaion_App.jpg"
-            alt="Meditaion App"
-            width="360"
-          />
-          <h2>Meditaion App</h2>
-          <p>App</p>
-        </li>
-        <li>
-          <img src="./images/Taxi_Service.jpg" alt="Taxi Service" />
-          <h2>Taxi Service</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/Screen_Illustrations.jpg"
-            alt="Screen Illustrations"
-          />
-          <h2>Screen Illustrations</h2>
-          <p>Design</p>
-        </li>
-        <li>
-          <img src="./images/Online_Courses.jpg" alt="Online Courses" />
-          <h2>Online Courses</h2>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/Instagram_Stories_Concept.jpg"
-            alt="Instagram Stories Concept"
-          />
-          <h2>Instagram Stories Concept</h2>
-          <p>Design</p>
-        </li>
-        <li>
-          <img src="./images/Organic_Food.jpg" alt="Organic Food" />
-          <h2>Organic Food</h2>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img src="./images/Fresh_Coffee.jpg" alt="Fresh Coffee" />
-          <h2>Fresh Coffee</h2>
-          <p>Web Site</p>
-        </li>
-      </ul>
+      <section>
+        <h1 class="section-title-hidden">Portfolio</h1>
+        <ul>
+          <li>
+            <img
+              src="./images/Banking_App_Interface_Concept.jpg"
+              alt="Banking App Interface Concept"
+              width="360"
+            />
+            <h2>Banking App Interface Concept</h2>
+            <p>App</p>
+          </li>
+          <li>
+            <img
+              src="./images/Cashless_Payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h2>Cashless Payment</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Meditaion_App.jpg"
+              alt="Meditaion App"
+              width="360"
+            />
+            <h2>Meditaion App</h2>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/Taxi_Service.jpg" alt="Taxi Service" />
+            <h2>Taxi Service</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Screen_Illustrations.jpg"
+              alt="Screen Illustrations"
+            />
+            <h2>Screen Illustrations</h2>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/Online_Courses.jpg" alt="Online Courses" />
+            <h2>Online Courses</h2>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/Instagram_Stories_Concept.jpg"
+              alt="Instagram Stories Concept"
+            />
+            <h2>Instagram Stories Concept</h2>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/Organic_Food.jpg" alt="Organic Food" />
+            <h2>Organic Food</h2>
+            <p>Web Site</p>
+          </li>
+          <li>
+            <img src="./images/Fresh_Coffee.jpg" alt="Fresh Coffee" />
+            <h2>Fresh Coffee</h2>
+            <p>Web Site</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Footer -->
     <footer>
