--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
     <main>
       <!-- Filtr -->
 
-      <ul>
+      <ul class="list">
         <li><button type="button">All</button></li>
         <li><button type="button">Web Site</button></li>
         <li><button type="button">App</button></li>
@@ -62,7 +62,7 @@
       <!-- list of works -->
       <section>
         <h1 class="section-title-hidden">Portfolio</h1>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/Banking_App_Interface_Concept.jpg"
@@ -130,13 +130,14 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer>
-      <a href="./index.html" class="logo-web"
-        >WEB<span class="logo-studio">STUDIO</span></a
+    <footer class="footer">
+      <a href="./index.html" class="header-logo-web link"
+        >WEB<span class="logo-studio-footer">Studio</span></a
       >
 
       <p class="footer-title">
-        Increase the flow of customers and sales for your business with digital
+        Increase the flow of customers and <br />
+        sales for your business with digital <br />
         marketing & growth solutions.
       </p>
     </footer>
