--- a/portfolio.html
+++ b/portfolio.html
@@ -52,11 +52,14 @@
     <main>
       <section>
         <!-- Filtr -->
-        <button type="button">All</button>
-        <button type="button">Web Site</button>
-        <button type="button">App</button>
-        <button type="button">Desing</button>
-        <button type="button">Marketing</button>
+
+        <ul class="list">
+          <li><button type="button">All</button></li>
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Desing</button></li>
+          <li><button type="button">Marketing</button></li>
+        </ul>
         <!-- list of works -->
 
         <h1 class="section-title-hidden">Portfolio</h1>
