--- a/portfolio.html
+++ b/portfolio.html
@@ -50,27 +50,26 @@
     </header>
     <!-- Home page -->
     <main>
+      <!-- Filtr -->
+
+      <ul class="list">
+        <li><button type="button">All</button></li>
+        <li><button type="button">Web Site</button></li>
+        <li><button type="button">App</button></li>
+        <li><button type="button">Desing</button></li>
+        <li><button type="button">Marketing</button></li>
+      </ul>
+      <!-- list of works -->
       <section>
-        <!-- Filtr -->
-
-        <ul class="list">
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Desing</button></li>
-          <li><button type="button">Marketing</button></li>
-        </ul>
-        <!-- list of works -->
-
         <h1 class="section-title-hidden">Portfolio</h1>
-        <ul class="list">
+        <ul>
           <li>
             <img
               src="./images/Banking_App_Interface_Concept.jpg"
               alt="Banking App Interface Concept"
               width="360"
             />
-            <h2>Banking App Interface Concept</h2>
+            <h2 class="list">Banking App Interface Concept</h2>
             <p>App</p>
           </li>
           <li>
