--- a/portfolio.html
+++ b/portfolio.html
@@ -50,18 +50,18 @@
     </header>
     <!-- Home page -->
     <main>
-      <!-- Filtr -->
-
-      <ul class="list">
-        <li><button type="button">All</button></li>
-        <li><button type="button">Web Site</button></li>
-        <li><button type="button">App</button></li>
-        <li><button type="button">Desing</button></li>
-        <li><button type="button">Marketing</button></li>
-      </ul>
-      <!-- list of works -->
       <section>
         <h1 class="section-title-hidden">Portfolio</h1>
+        <!-- Filtr -->
+        <ul class="list">
+          <li><button type="button">All</button></li>
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Desing</button></li>
+          <li><button type="button">Marketing</button></li>
+        </ul>
+        <!-- list of works -->
+        <h2 class="section-title-hidden">list of works</h2>
         <ul>
           <li>
             <img
