--- a/portfolio.html
+++ b/portfolio.html
@@ -54,11 +54,11 @@
         <h1 class="section-title-hidden">Portfolio</h1>
         <!-- Filtr -->
         <ul class="list">
-          <li><button type="button">All</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Desing</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li><button type="button" class="button-filtr">All</button></li>
+          <li><button type="button" class="button-filtr">Web Site</button></li>
+          <li><button type="button" class="button-filtr">App</button></li>
+          <li><button type="button" class="button-filtr">Desing</button></li>
+          <li><button type="button" class="button-filtr">Marketing</button></li>
         </ul>
         <!-- list of works -->
         <h2 class="section-title-hidden">list of works</h2>
