--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,8 @@
           <li><button type="button" class="button-filtr">Marketing</button></li>
         </ul>
         <!-- list of works -->
-        <h2 class="section-title-hidden">list of works</h2>
-        <ul>
+        <h2 class="section-title-hidden">Banking App Interface Concept</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/Banking_App_Interface_Concept.jpg"
