--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
           <li><button type="button" class="button-filtr">All</button></li>
           <li><button type="button" class="button-filtr">Web Site</button></li>
           <li><button type="button" class="button-filtr">App</button></li>
-          <li><button type="button" class="button-filtr">Desing</button></li>
+          <li><button type="button" class="button-filtr">Design</button></li>
           <li><button type="button" class="button-filtr">Marketing</button></li>
         </ul>
         <!-- list of works -->
@@ -78,7 +78,7 @@
               alt="Cashless Payment"
               width="360"
             />
-            <h2>Cashless Payment</h2>
+            <h2 class="section-title">Cashless Payment</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -87,12 +87,12 @@
               alt="Meditaion App"
               width="360"
             />
-            <h2>Meditaion App</h2>
+            <h2 class="section-title">Meditaion App</h2>
             <p>App</p>
           </li>
           <li>
             <img src="./images/Taxi_Service.jpg" alt="Taxi Service" />
-            <h2>Taxi Service</h2>
+            <h2 class="section-title">Taxi Service</h2>
             <p>Marketing</p>
           </li>
           <li>
@@ -100,7 +100,7 @@
               src="./images/Screen_Illustrations.jpg"
               alt="Screen Illustrations"
             />
-            <h2>Screen Illustrations</h2>
+            <h2 class="section-title">Screen Illustrations</h2>
             <p>Design</p>
           </li>
           <li>
@@ -113,7 +113,7 @@
               src="./images/Instagram_Stories_Concept.jpg"
               alt="Instagram Stories Concept"
             />
-            <h2>Instagram Stories Concept</h2>
+            <h2 class="section-title">Instagram Stories Concept</h2>
             <p>Design</p>
           </li>
           <li>
