--- a/portfolio.html
+++ b/portfolio.html
@@ -69,8 +69,8 @@
               alt="Banking App Interface Concept"
               width="360"
             />
-            <h2 class="list">Banking App Interface Concept</h2>
-            <p>App</p>
+            <h2 class="section-title">Banking App Interface Concept</h2>
+            <p class="text-p">App</p>
           </li>
           <li>
             <img
@@ -79,7 +79,7 @@
               width="360"
             />
             <h2 class="section-title">Cashless Payment</h2>
-            <p>Marketing</p>
+            <p class="text-p">Marketing</p>
           </li>
           <li>
             <img
@@ -88,12 +88,12 @@
               width="360"
             />
             <h2 class="section-title">Meditaion App</h2>
-            <p>App</p>
+            <p class="text-p">App</p>
           </li>
           <li>
             <img src="./images/Taxi_Service.jpg" alt="Taxi Service" />
             <h2 class="section-title">Taxi Service</h2>
-            <p>Marketing</p>
+            <p class="text-p">Marketing</p>
           </li>
           <li>
             <img
@@ -101,12 +101,12 @@
               alt="Screen Illustrations"
             />
             <h2 class="section-title">Screen Illustrations</h2>
-            <p>Design</p>
+            <p class="text-p">Design</p>
           </li>
           <li>
             <img src="./images/Online_Courses.jpg" alt="Online Courses" />
-            <h2>Online Courses</h2>
-            <p>Marketing</p>
+            <h2 class="section-title">Online Courses</h2>
+            <p class="text-p">Marketing</p>
           </li>
           <li>
             <img
@@ -114,17 +114,17 @@
               alt="Instagram Stories Concept"
             />
             <h2 class="section-title">Instagram Stories Concept</h2>
-            <p>Design</p>
+            <p class="text-p">Design</p>
           </li>
           <li>
             <img src="./images/Organic_Food.jpg" alt="Organic Food" />
-            <h2>Organic Food</h2>
-            <p>Web Site</p>
+            <h2 class="section-title">Organic Food</h2>
+            <p class="text-p">Web Site</p>
           </li>
           <li>
             <img src="./images/Fresh_Coffee.jpg" alt="Fresh Coffee" />
-            <h2>Fresh Coffee</h2>
-            <p>Web Site</p>
+            <h2 class="section-title">Fresh Coffee</h2>
+            <p class="text-p">Web Site</p>
           </li>
         </ul>
       </section>
