--- a/portfolio.html
+++ b/portfolio.html
@@ -90,6 +90,9 @@
             <h2 class="section-title">Meditaion App</h2>
             <p class="text-p">App</p>
           </li>
+        </ul>
+        <h2 class="section-title-hidden">Marketing</h2>
+        <ul class="list">
           <li>
             <img src="./images/Taxi_Service.jpg" alt="Taxi Service" />
             <h2 class="section-title">Taxi Service</h2>
@@ -108,6 +111,9 @@
             <h2 class="section-title">Online Courses</h2>
             <p class="text-p">Marketing</p>
           </li>
+        </ul>
+        <h2 class="section-title-hidden">Desing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/Instagram_Stories_Concept.jpg"
