--- a/portfolio.html
+++ b/portfolio.html
@@ -54,31 +54,11 @@
         <h1 class="section-title-hidden">Portfolio</h1>
         <!-- Filtr -->
         <ul class="list">
-          <li>
-            <a class="link" href="" button type="button" class="button-filtr"
-              >All</a
-            >
-          </li>
-          <li>
-            <a class="link" href="" button type="button" class="button-filtr"
-              >Web Site</a
-            >
-          </li>
-          <li>
-            <a class="link" href="" button type="button" class="button-filtr"
-              >App</a
-            >
-          </li>
-          <li>
-            <a class="link" href="" button type="button" class="button-filtr"
-              >Design</a
-            >
-          </li>
-          <li>
-            <a class="link" href="" button type="button" class="button-filtr"
-              >Marketing</a
-            >
-          </li>
+          <li><button type="button" class="button-filtr">All</button></li>
+          <li><button type="button" class="button-filtr">Web Site</button></li>
+          <li><button type="button" class="button-filtr">App</button></li>
+          <li><button type="button" class="button-filtr">Design</button></li>
+          <li><button type="button" class="button-filtr">Marketing</button></li>
         </ul>
         <!-- list of works -->
         <h2 class="section-title-hidden">Banking App Interface Concept</h2>
