--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         </ul>
         <!-- list of works -->
         <h2 class="section-title-hidden">Banking App Interface Concept</h2>
-        <ul class="list">
+        <ul class="portfolio-list list">
           <li>
             <img
               src="./images/Banking_App_Interface_Concept.jpg"
