--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
     </header>
     <!-- Home page -->
     <main>
-      <section>
+      <section class="section-portfolio">
         <h1 class="section-title-hidden">Portfolio</h1>
         <!-- Filtr -->
         <ul class="list">
@@ -60,73 +60,8 @@
           <li><button type="button" class="button-filtr">Design</button></li>
           <li><button type="button" class="button-filtr">Marketing</button></li>
         </ul>
+
         <!-- list of works -->
-        <h2 class="section-title-hidden">Banking App Interface Concept</h2>
-        <ul class="portfolio-list list">
-          <li>
-            <img
-              src="./images/Banking_App_Interface_Concept.jpg"
-              alt="Banking App Interface Concept"
-              width="360"
-            />
-            <h2 class="section-title">Banking App Interface Concept</h2>
-            <p class="text-p">App</p>
-          </li>
-          <li>
-            <img
-              src="./images/Cashless_Payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h2 class="section-title">Cashless Payment</h2>
-            <p class="text-p">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/Meditaion_App.jpg"
-              alt="Meditaion App"
-              width="360"
-            />
-            <h2 class="section-title">Meditaion App</h2>
-            <p class="text-p">App</p>
-          </li>
-          <li>
-            <img src="./images/Taxi_Service.jpg" alt="Taxi Service" />
-            <h2 class="section-title">Taxi Service</h2>
-            <p class="text-p">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/Screen_Illustrations.jpg"
-              alt="Screen Illustrations"
-            />
-            <h2 class="section-title">Screen Illustrations</h2>
-            <p class="text-p">Design</p>
-          </li>
-          <li>
-            <img src="./images/Online_Courses.jpg" alt="Online Courses" />
-            <h2 class="section-title">Online Courses</h2>
-            <p class="text-p">Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/Instagram_Stories_Concept.jpg"
-              alt="Instagram Stories Concept"
-            />
-            <h2 class="section-title">Instagram Stories Concept</h2>
-            <p class="text-p">Design</p>
-          </li>
-          <li>
-            <img src="./images/Organic_Food.jpg" alt="Organic Food" />
-            <h2 class="section-title">Organic Food</h2>
-            <p class="text-p">Web Site</p>
-          </li>
-          <li>
-            <img src="./images/Fresh_Coffee.jpg" alt="Fresh Coffee" />
-            <h2 class="section-title">Fresh Coffee</h2>
-            <p class="text-p">Web Site</p>
-          </li>
-        </ul>
       </section>
     </main>
     <!-- Footer -->
