--- a/portfolio.html
+++ b/portfolio.html
@@ -62,6 +62,11 @@
         </ul>
 
         <!-- list of works -->
+        <ul class="list">
+          <li class="link">
+            <img src="./images/Banking_App_Interface_Concept.jpg" alt="" />
+          </li>
+        </ul>
       </section>
     </main>
     <!-- Footer -->
