--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,7 @@
         <ul class="list">
           <li class="link">
             <img src="./images/Banking_App_Interface_Concept.jpg" alt="" />
+            <a class="link" href="">Banking App Interface Concept</a>
           </li>
         </ul>
       </section>
