--- a/portfolio.html
+++ b/portfolio.html
@@ -63,9 +63,13 @@
 
         <!-- list of works -->
         <ul class="list">
-          <li class="link">
-            <img src="./images/Banking_App_Interface_Concept.jpg" alt="" />
-            <a class="link" href="">Banking App Interface Concept</a>
+          <li>
+            <a class="link" href=""></a>
+            <img
+              src="./images/Banking_App_Interface_Concept.jpg"
+              alt="Banking_App_Interface_Concept"
+              width="360"
+            />
           </li>
         </ul>
       </section>
