--- a/portfolio.html
+++ b/portfolio.html
@@ -64,12 +64,9 @@
         <!-- list of works -->
         <ul class="list">
           <li>
-            <a class="link" href=""></a>
-            <img
-              src="./images/Banking_App_Interface_Concept.jpg"
-              alt="Banking_App_Interface_Concept"
-              width="360"
-            />
+            <a class="link" href="./images/Banking_App_Interface_Concept.jpg"
+              >Banking App Interface Concept</a
+            >
           </li>
         </ul>
       </section>
