--- a/portfolio.html
+++ b/portfolio.html
@@ -64,9 +64,12 @@
         <!-- list of works -->
         <ul class="list">
           <li>
-            <a class="link" href="./images/Banking_App_Interface_Concept.jpg"
-              >Banking App Interface Concept</a
-            >
+            <a class="link" href=""
+              ><img
+                src="./images/Banking_App_Interface_Concept.jpg"
+                alt="apps"
+                width="360"
+            /></a>
           </li>
         </ul>
       </section>
