--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,8 @@
                 alt="apps"
                 width="360"
             /></a>
+            <h2 class="section-title">Banking App Interface Concept</h2>
+            <p class="text-p">App</p>
           </li>
         </ul>
       </section>
