--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
             <a class="link" href=""
               ><img
                 src="./images/Banking_App_Interface_Concept.jpg"
-                alt="apps"
+                alt="app"
                 width="360"
             /></a>
             <h2 class="section-title">Banking App Interface Concept</h2>
