--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,6 @@
               <p class="text-p">App</p>
             </a>
           </li>
-
           <li>
             <a class="link" href=""
               ><img
@@ -84,6 +83,13 @@
               />
               <h2 class="section-title">Cashless Payment</h2>
               <p class="text-p">Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href=""
+              ><img src="./images/Meditaion_App.jpg" alt="App" width="360" />
+              <h2 class="section-title">Meditaion App</h2>
+              <p class="text-p">App</p>
             </a>
           </li>
         </ul>
