--- a/index.html
+++ b/index.html
@@ -35,15 +35,17 @@
         </ul>
       </nav>
       <!-- Contacts -->
-      <address class="address">
-        <ul class="auth-nav list">
+      <address class="contacts">
+        <ul class="list">
           <li>
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="auth-nav link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="auth-nav link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
