--- a/portfolio.html
+++ b/portfolio.html
@@ -103,6 +103,17 @@
               <p class="text-p">Marketing</p>
             </a>
           </li>
+          <li>
+            <a class="link" href=""
+              ><img
+                src="./images/Screen_Illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h2 class="section-title">Screen Illustrations</h2>
+              <p class="text-p">Design</p>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
