--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
         </ul>
       </nav>
       <!-- Contacts -->
-      <address class="contacts">
-        <ul class="list">
-          <li>
-            <a class="auth-nav link" href="mailto:info@devstudio.com"
+
+      <address class="address">
+        <ul class="auth-nav list">
+          <li class="text-contacts-email">
+            <a class="link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li>
-            <a class="auth-nav link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
+          <li class="text-contacts-tel">
+            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
