--- a/portfolio.html
+++ b/portfolio.html
@@ -38,12 +38,14 @@
       <address class="address">
         <ul class="auth-nav list">
           <li class="text-contacts-email">
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="header-link link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="text-contacts-tel">
-            <a class="link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="header-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
