--- a/portfolio.html
+++ b/portfolio.html
@@ -116,6 +116,17 @@
               <p class="text-p">Design</p>
             </a>
           </li>
+          <li>
+            <a class="link" href=""
+              ><img
+                src="./images/Online_Courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h2 class="section-title">Online Courses</h2>
+              <p class="text-p">Marketing</p>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
