--- a/portfolio.html
+++ b/portfolio.html
@@ -127,6 +127,17 @@
               <p class="text-p">Marketing</p>
             </a>
           </li>
+          <li>
+            <a class="link" href=""
+              ><img
+                src="./images/Instagram_Stories_Concept.jpg"
+                alt="Instagram Stories Concept"
+                width="360"
+              />
+              <h2 class="section-title">Instagram Stories Concept</h2>
+              <p class="text-p">Design</p>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
