--- a/portfolio.html
+++ b/portfolio.html
@@ -138,6 +138,28 @@
               <p class="text-p">Design</p>
             </a>
           </li>
+          <li>
+            <a class="link" href=""
+              ><img
+                src="./images/Organic_Food.jpg"
+                alt="Organic_Food"
+                width="360"
+              />
+              <h2 class="section-title">Organic_Food</h2>
+              <p class="text-p">Web Site</p>
+            </a>
+          </li>
+          <li>
+            <a class="link" href=""
+              ><img
+                src="./images/Fresh_Coffee.jpg"
+                alt="Fresh Coffee"
+                width="360"
+              />
+              <h2 class="section-title">Fresh Coffee</h2>
+              <p class="text-p">Web Site</p>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
