--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,11 @@
           </li>
           <li>
             <a class="link" href=""
-              ><img src="./images/Meditaion_App.jpg" alt="App" width="360" />
+              ><img
+                src="./images/Meditaion_App.jpg"
+                alt="Meditaion App"
+                width="360"
+              />
               <h2 class="section-title">Meditaion App</h2>
               <p class="text-p">App</p>
             </a>
@@ -145,7 +149,7 @@
                 alt="Organic_Food"
                 width="360"
               />
-              <h2 class="section-title">Organic_Food</h2>
+              <h2 class="section-title">Organic Food</h2>
               <p class="text-p">Web Site</p>
             </a>
           </li>
