--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
                 alt="Meditaion App"
                 width="360"
               />
-              <h2 class="section-title">Meditaion App</h2>
+              <h2 class="section-title">Meditation App</h2>
               <p class="text-p">App</p>
             </a>
           </li>
