--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h1 class="section-title-text">
           Effective Solutions for Your Business
         </h1>
-        <button type="button" class="button-title-text">Order Service</button>
+        <button type="button" class="button-order">Order Service</button>
       </section>
       <!-- Home page section 2 -->
       <section class="section-strategy">
@@ -67,33 +67,29 @@
           <li>
             <h3 class="section-title">Strategy</h3>
             <p class="text-p">
-              Our goal is to identify the business <br />
-              problem to walk away with the <br />
+              Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
             <h3 class="section-title">Punctuality</h3>
             <p class="text-p">
-              Bring the key message to the <br />
-              brand's audience for the best price <br />
+              Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
             <h3 class="section-title">Diligence</h3>
             <p class="text-p">
-              Research and confirm brands that <br />
-              present the strongest digital growth <br />
-              opportunities and minimize risk.
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
             </p>
           </li>
           <li>
             <h3 class="section-title">Technologies</h3>
             <p class="text-p">
-              Design practice focused on digital <br />
-              experiences. We bring forth a deep <br />
-              passion for problem-solving.
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
             </p>
           </li>
         </ul>
@@ -156,8 +152,7 @@
       >
 
       <p class="footer-title">
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
