--- a/portfolio.html
+++ b/portfolio.html
@@ -174,8 +174,7 @@
       >
 
       <p class="footer-title">
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
     </footer>
